@@ -8,7 +8,7 @@
 #ifndef THECHESS_MODEL_GAMAPARAMATERS_HPP_
 #define THECHESS_MODEL_GAMAPARAMATERS_HPP_
 
-#include "model/global.hpp"
+#include "model/model.hpp"
 #include "model/record.hpp"
 #include "chess/Moves.hpp"
 #include "chess/Piece.hpp"
